# slitheriorustserver

./: Cargo.toml
src/: config.rs  lib.rs  main.rs
src/game/: food.rs  math.rs  mod.rs  sector.rs  snake.rs  world.rs
src/protocol/: incoming.rs  mod.rs  outgoing.rs  packet.rs  reader.rs  types.rs  writer.rs
src/server/: handler.rs  mod.rs  session.rs  websocket.rs
